JBTM-3117 Upgrade to the latest LRA spec version